<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Fragment Titles-->
    <string name="app_name">ArrowPoint</string>

    <string name="app_version">v1.2</string>
    <string name="title_section1">Dashboard</string>
    <string name="title_section2">Power Detail</string>
    <string name="title_section3">Systems Detail</string>
    <string name="title_section4">Graph</string>
    <string name="title_section5">Messages</string>
    <string name="title_section6">GPS Tracking</string>

    <!-- Options -->
    <string name="action_settings">Settings</string>
    <string name="debug_mode">Simulate Data</string>
    <string name="test_layout">Test Layout</string>
    <string name="driver_mode">Toggle Driver Mode</string>
    <string name="refresh">refresh</string>
    <string name="showDetail">Show Detail</string>
    <string name="highDetail">Hide Detail</string>

    <!-- Titles and Headings -->
    <string name="messageHints">-d message driver</string>
    <string name="driverMode">Driver Mode</string>
    <string name="receivedmessages">Received Messages</string>
    <string name="messagereceiver">Message Receiver</string>
    <string name="sendmessage">Send Message</string>
    <string name="sendmessagebutton">Send</string>
    <string name="buspowerHeader">Bus Power</string>
    <string name="speedHeader">Speed</string>
    <string name="setpointHeader">Set Point</string>
    <string name="stateHeader">Drive Mode</string>
    <string name="itemHeader">Component</string>
    <string name="voltageHeader">Voltage</string>
    <string name="currentHeader">Current</string>
    <string name="powerHeader">Power</string>
    <string name="totalInputPowerHeader">Total Input (W)</string>
    <string name="netPowerPositionHeader">Net Power Position</string>
    <string name="alertHeader">Alerts</string>
    <string name="array1">Array 1</string>
    <string name="array2">Array 2</string>
    <string name="array3">Array 3</string>
    <string name="controller">Controller</string>
    <string name="battery">Battery</string>

    <string name="start">Start</string>
    <string name="reverse">Reverse</string>
    <string name="netural">Netural</string>
    <string name="drive">Drive</string>
    <string name="idle">Idle</string>
    <string name="run">Run</string>
    <string name="regen">Regen</string>
    <string name="brakes">Brakes</string>
    <string name="horn">Horn</string>

    <string name="LeftBlinker">L</string>
    <string name="RightBlinker">R</string>
    <string name="CruiseControl">Cruise\nControl</string>
    <string name="controllerTemp">Controller Temp</string>
    <string name="motorTemp">Motor Temp</string>
    <string name="minCellV">Min Cell</string>
    <string name="maxCellV">Max Cell</string>
    <string name="maxBatteryTemp">Battery Temp</string>
    <string name="twelveVolt">12 Volt System</string>
    <string name="lastLockedSOC">Last Locked SOC: N/A</string>
    <string name="gpsData">GPS Data</string>

    <!-- Units and default values-->
    <string name="zero">0</string>
    <string name="kph">kph</string>
    <string name="kw">kW</string>
    <string name="degree">\u2103</string>
    <string name="percent">%</string>
    <string name="message"> </string>

    <!-- Graph and Spinners -->
	<string name="Spinner_Prime_Prompt">Primary Data</string>
	<string name="Spinner_Sec_Prompt">Secondary Data</string>

    <string-array name="Reciever_Options">
        <item>Team</item>
        <item>Arrow1</item>
        <item>Lead</item>
        <item>Chase</item>
    </string-array>

    <string-array name="Message_Options">
        <item>Typed Message</item>
        <item>Comms check?</item>
        <item>Lost comms</item>
        <item>Target = </item>
        <item>BOX BOX BOX</item>
    </string-array>

	<string-array name="Prime_Options">
        <item>Vehicle Speed</item>
        <item>Bus Power</item>
        <item>Array Power</item>
        <item>Motor Temp</item>
        <item>Max Cell Temp</item>
        <item>Controller Temp</item>
        <item>Cell Voltage - Min</item>
        <item>Cell Voltage - Max</item>
        <item>Battery Voltage</item>
        <item>Battery Current</item>
	</string-array>

</resources>
