<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/DriverDetailsFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        tools:context="com.example.arrowpoint.ArrowPoint$PlaceholderFragment"
        android:padding="16sp"     
        android:stretchColumns="0,1,2,3"        
		>
		
    
        	<LinearLayout android:id="@+id/stateIcons" android:paddingTop="10sp">
        	   
        	     <au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
	    		    android:id="@+id/lblState"
	    		    android:layout_width="80dp"
	    		    android:layout_height="wrap_content"
	    		    android:text="@string/idle" 
	    		    android:textSize="20sp"
                     android:layout_weight="1"
                     android:gravity="center"
	    		     />
        	    
    	    	<au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
	    		    android:id="@+id/lblRegen"
                    android:layout_width="80dp"
	    		    android:layout_height="wrap_content"
	    		    android:text="@string/regen" 
	    		    android:textSize="20sp"
                    android:layout_weight="1"
                    android:gravity="center"
	    		    />
    	    

    	    	<au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
	    		    android:id="@+id/lblBrakes"
                    android:layout_width="80dp"
	    		    android:layout_height="wrap_content"
	    		    android:text="@string/brakes" 
	    		    android:textSize="20sp"
                    android:layout_weight="1"
                    android:gravity="center"
	    		     />    	    	

				<au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
	    		    android:id="@+id/lblHorn"
                    android:layout_width="80dp"
	    		    android:layout_height="wrap_content"
	    		    android:text="@string/horn" 
	    		    android:textSize="20sp"
                    android:layout_weight="1"
                    android:gravity="center"
	    		     />
    	</LinearLayout>
    	
    	<TableRow android:id="@+id/minCellRow" android:paddingTop="50sp">
        	   
        	     <au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
	    		    android:id="@+id/lblMinBattery"
	    		    android:layout_width="match_parent"
	    		    android:layout_height="wrap_content"
	    		    android:text="@string/minCellV" 
	    		    android:textSize="20sp"
	    		     />
        	    
    	    	<au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
	    		    android:id="@+id/txtMinBattery"
	    		    android:layout_width="match_parent"
	    		    android:layout_height="wrap_content"
	    		    android:text="@string/zero" 
	    		    android:textSize="20sp"
	    		    />

    	    	
    	    	
					    	
    	</TableRow>

    <TableRow android:id="@+id/maxCellRow">

        <au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
            android:id="@+id/lblMaxBattery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maxCellV"
            android:textSize="20sp"
            />

        <au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
            android:id="@+id/txtMaxBattery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="20sp"
            />
    </TableRow>

    <TableRow android:id="@+id/twelveVoltSystemRow">

        <au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
            android:id="@+id/lbl12Volt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twelveVolt"
            android:textSize="20sp"
            />

        <au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
            android:id="@+id/txt12VoltDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="20sp"
            />




    </TableRow>

    	<TableRow android:id="@+id/motorTempRow" android:paddingTop="50sp">
        	     <au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
	    		    android:id="@+id/lblMotorTempDetail"
	    		    android:layout_width="match_parent"
	    		    android:layout_height="wrap_content"
	    		    android:text="@string/motorTemp" 
	    		    android:textSize="20sp"
	    		     />
        	    
    	    	<au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
	    		    android:id="@+id/txtMotorTempDetail"
	    		    android:layout_width="match_parent"
	    		    android:layout_height="wrap_content"
	    		    android:text="@string/zero" 
	    		    android:textSize="20sp"
	    		    />
    	</TableRow>
    	

    <TableRow android:id="@+id/controllerTempRow">
        <au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
            android:id="@+id/lblControllerTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/controllerTemp"
            android:textSize="20sp"
            />

        <au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
            android:id="@+id/txtControllerTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="20sp"
            />
    </TableRow>



    <TableRow android:id="@+id/maxBatteryTempRow">
        <au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
            android:id="@+id/lblMaxBatteryTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maxBatteryTemp"
            android:textSize="20sp"
            />

        <au.com.teamarrow.arrowpoint.utils.AutoResizeTextView
            android:id="@+id/txtMaxBatteryTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="20sp"
            />

    </TableRow>
        	
    
</TableLayout>    