<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/DashboardTableMaster"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    tools:context="com.example.arrowpoint.ArrowPoint$PlaceholderFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/background_color"
        android:measureWithLargestChild="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/frame_bg">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sendmessage"
                    android:id="@+id/lblSendMessage"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_system_details"
                    android:gravity="center_horizontal" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtSend"
                        android:background="@color/text_color"
                        android:textColor="@color/background_color"
                        android:textSize="@dimen/text_size_system_details"
                        android:layout_margin="@dimen/margin_medium"
                        android:hint="Add message"
                        android:padding="@dimen/margin_small" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sendmessagebutton"
                        android:id="@+id/btnSendMessage"
                        android:textColor="@color/text_color"
                        android:background="@color/IntegralRed_color"
                        android:textSize="@dimen/text_size_system_details"
                        android:layout_gravity="right"
                        android:onClick="send"
                        android:layout_margin="@dimen/margin_medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/messageHints"
                        android:id="@+id/txtMessageHints"
                        android:textColor="@color/frame_secondary_color"
                        android:textSize="@dimen/text_size_small"
                        android:layout_gravity="center_vertical" />
                </FrameLayout>

            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/frame_bg"
                android:layout_margin="@dimen/margin_medium">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/receivedmessages"
                        android:id="@+id/lblReceivedMessages"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_system_details"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txtReceivedMessages"
                        android:textColor="@color/text_color"
                        android:gravity="left"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:layout_marginRight="@dimen/margin_medium" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

</GridLayout>